--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -7,6 +7,9 @@
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
     <title>Drew Herron</title>
     <style type="text/css">
+      #container {
+
+      }
       .header {
         position: relative;
         margin-bottom: 0px;
@@ -106,41 +109,16 @@
         left: 0px;
         filter: blur(.5px);
       }
-      #nano {
-        position: absolute;
-        top: 300%;
+      #nanoIcon {
+        visibility: hidden;
+        position: fixed;
+        bottom: 0px;
         right: 0px;
+        opacity: 99%;
       }
       #nanoAddress {
         left: 50%
         right: auto;
-      }
-      .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        padding-top: 100px; /* Location of the box */
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        border: solid 10px black;
-        border-radius: 10px;
-        overflow: auto; /* Enable scroll if needed */
-        background-color: #000000; /* Fallback color */
-        background-color: #00000060; /* Black w/ opacity */
-      }
-      /* The Close Button */
-      .close {
-        color: #aaaaaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-      }
-      .close:hover,
-      .close:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
       }
       .sticky {
         position: -webkit-sticky;
@@ -171,7 +149,7 @@
     </style>
   </head>
   <body class="z1">
-    <img id="nano" class="z5" src="images/nano_icon.png" alt="Donate" height="50px">
+    <img id="nanoIcon" class="z5" src="images/nano_icon.png" alt="Donate" height="50px">
     <div class="header">
       <p class="z5" id="header-name">Drew Herron</p>
       <img class="z5 mountains" src="images/mountainverse1.gif" width="100%">
@@ -203,11 +181,6 @@
         </a>
       </div>
     </div>
-    <div id="nanoModal" class="z6 modal">
-      <div class="modal-content">
-        <img id="nanoAddress" src="images/nano_address.png" alt="Send Nano">
-      </div>
-    </div>
     </div>
     <img id="moon" class="z2 moon" left="20px" src="images/moon.png" width="100px">
     <div class="footer">
@@ -215,7 +188,7 @@
     </div>
     <script>
       var container = document.getElementById('container');
-      var nano = document.getElementById('nano');
+      var nano = document.getElementById('nanoIcon');
       var navbutton1 = document.getElementsByClassName('navbutton1')[0];
       var navbutton2 = document.getElementsByClassName('navbutton2')[0];
       var navbutton3 = document.getElementsByClassName('navbutton3')[0];
@@ -258,26 +231,13 @@
         } else {
           navbutton5.style.visibility = 'hidden';
         }
+        if (scrollPixels > 1645) {
+          nanoIcon.style.visibility = 'visible';
+        } else {
+          nanoIcon.style.visibility = 'hidden';
+        }
         // console.log(scrollPixels)
       });
-      // Get the modal
-      var modal = document.getElementById('nanoModal');
-      nano.onclick = function() {
-      modal.style.display = "block";
-    }
-// When the user clicks on <span> (x), close the modal
-span.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
     </script>
   </body>
 </html>
