title/margin change

--- a/Code/Drew/javascript/lab02-count_words.html
+++ b/Code/Drew/javascript/lab02-count_words.html
@@ -2,20 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Word Counter</title>
+    <title>Simple Word Counter</title>
     <style type="text/css">
       .container {
         display: flex;
         flex-direction: column;
         align-items: center;
       }
+      .output {
+        margin: 50px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Word Counter</h1>
+      <h1>Simple Word Counter</h1>
       <!-- <p>Input your text here:</p> -->
-      <textarea id="inputBox" name="inputBox" rows="8" cols="80" placeholder="Enter your text here"></textarea>
+      <textarea id="inputBox" name="inputBox" rows="10" cols="80" placeholder="Enter your text here"></textarea>
       <div></div>
       <!-- <button type="button" name="submit">Submit</button> -->
       <div class="output">
