--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -110,11 +110,11 @@
         filter: blur(.5px);
       }
       #nanoIcon {
-        visibility: hidden;
+        /* visibility: hidden; */
         position: fixed;
         bottom: 0px;
         right: 0px;
-        opacity: .4;
+        opacity: 0;
         cursor: pointer;
       }
       #nanoIcon:hover {
@@ -307,6 +307,7 @@
         var scrollTop = window.pageYOffset || window.scrollTop;
         var scrollPercent = scrollTop/scrollArea || 0;
         moon.style.left = scrollPercent*1030 + 'px';
+        nanoIcon.style.opacity = (scrollPercent/2)-.3
         if (scrollPixels > 500) {
           navbutton1.style.visibility = 'visible';
         } else {
@@ -332,11 +333,11 @@
         } else {
           navbutton5.style.visibility = 'hidden';
         }
-        if (scrollPercent > 1.40) {
-          nanoIcon.style.visibility = 'visible';
-        } else {
-          nanoIcon.style.visibility = 'hidden';
-        }
+        // if (scrollPercent > 1.40) {
+        //   nanoIcon.style.visibility = 'visible';
+        // } else {
+        //   nanoIcon.style.visibility = 'hidden';
+        // }
         console.log(scrollPercent)
       });
       // Modal
