Cleaning up files

--- a/Code/darren/html_lab1.html
+++ b/Code/darren/html_lab1.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400i" rel="stylesheet">
     <style type="text/css">
       body {
-        background-image:url("Parchment.jpg");
+        background-image:url("resource_files/Parchment.jpg");
         background-size:cover;
         padding-top: 50px;
         padding-right: 30px;
