--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style type="text/css">
       body {
-        background-image: url("googie_turq_400.jpg");
+        background-image: url("resource_files/googie_turq_400.jpg");
       }
       h2 {
         font-family:'Atomic Age', serif;
@@ -32,7 +32,7 @@
       }
       .header {
         grid-area: "header";
-        background-image: url("doodle_turq_400.jpg");
+        background-image: url("resource_files/doodle_turq_400.jpg");
         grid-column-start: 1;
         grid-column-end: 5;
         grid-row-start: 1;
@@ -70,7 +70,7 @@
         margin: 1%;
         text-align: center;
         display: inline-block;
-        background-image:url("starbursts.jpg");
+        background-image:url("resource_files/starbursts.jpg");
         font-family:'Atomic Age', serif;
         color: #B5095F;
         font-size: 14px;
@@ -117,7 +117,7 @@
         margin: 2%;
         height: 100px;
         text-align: left;
-        background-image:url("stars.jpg");
+        background-image:url("resource_files/stars.jpg");
         filter: drop-shadow(0px 5px 4px black);
         overflow: hidden;
         transition: .5s;
@@ -135,7 +135,7 @@
       }
       .sidebar {
         grid-area: "sidebar";
-        background-image:url("starbursts.jpg");
+        background-image:url("resource_files/starbursts.jpg");
         font-family:'Atomic Age', serif;
         font-size: 12px;
         color:#B5095F;
@@ -173,7 +173,7 @@
       }
       .footer {
         grid-area: "footer";
-        background-image: url("doodle_turq_400.jpg");
+        background-image: url("resource_files/doodle_turq_400.jpg");
         grid-row-start: 4;
         grid-row-end: 5;
         grid-column-start: 1;
@@ -210,7 +210,7 @@
           <div class="bp" id="bp2">
             <h2>Hollow Border</h2>
             <p>With pretty stories for which there's little good evidence Cambrian explosion vanquish the impossible emerged into consciousness nisi ut aliquid ex ea commodi consequatur sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem? Sea of Tranquility sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo astonishment gathered by gravity from which we spring and billions upon billions upon billions upon billions upon billions upon billions upon billions.
-            <img id="boom" src="boomerangs.jpg"/></p>
+            <img id="boom" src="resource_files/boomerangs.jpg"/></p>
           </div>
           <div class="bp" id="bp3">
             <h2>Condemned Cent</h2>
@@ -231,7 +231,7 @@
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2020</a></li>
         </div>
         <div id="month_frame">
-          <img id="rockets" src="rockets.png"/></p>
+          <img id="rockets" src="resource_files/rockets.png"/></p>
           <input type="search"></input>
           <input type="datetime-local">
           <input type="week"></input>
