changed button text and timing

--- a/Code/Drew/javascript/lab03-RPS.html
+++ b/Code/Drew/javascript/lab03-RPS.html
@@ -90,7 +90,7 @@
           <input type="number" id="gameNumBox" required minlength="1" maxlength="20" size="10">
           <p id="gameNumDisplay">Number of Games</p>
           <button id="startBtn" type="button" name="startBtn">Start</button>
-          <button id="resetBtn" type="button" name="resetBtn">Reset</button>
+          <button id="resetBtn" type="button" name="resetBtn">Change Names</button>
         </div>
         <div class="name2_div">
           <input type="text" id="name2" name="name2" required minlength="1" maxlength="20" size="10">
@@ -140,19 +140,19 @@
           if (choice1 == choice2) {
             gamespace1.style.backgroundColor = "#e9dea3"
             gamespace2.style.backgroundColor = "#e9dea3"
-            await sleep(1500);
+            await sleep(2000);
           } else if (choice1 == (choice2+1) %3) {
             score1++
             name1_div.innerHTML = `<p class="playerName">${name1}</p><br>Score: ${score1}`
             gamespace1.style.backgroundColor = "#7cd788"
             gamespace2.style.backgroundColor = "#f08862"
-            await sleep(1500);
+            await sleep(2000);
           } else if (choice2 == (choice1+1) %3) {
             score2++
             name2_div.innerHTML = `<p class="playerName">${name2}</p><br>Score: ${score2}`
             gamespace1.style.backgroundColor = "#f08862"
             gamespace2.style.backgroundColor = "#7cd788"
-            await sleep(1500);
+            await sleep(2000);
           }
         }
         startBtn.innerText = "Play Again"
