name change button?

--- a/Code/Drew/javascript/lab03-RPS.html
+++ b/Code/Drew/javascript/lab03-RPS.html
@@ -120,6 +120,7 @@
         return new Promise(resolve => setTimeout(resolve, ms));
       }
       startBtn.onclick = function() {
+        // why won't names change?
         let name1 = name1_box.value
         let name2 = name2_box.value
         let gameNum = gameNumBox.value
