changed margin, hover text

--- a/Code/Drew/javascript/lab04-api_site.html
+++ b/Code/Drew/javascript/lab04-api_site.html
@@ -11,7 +11,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 100px;
+        margin: 10%;
       }
       #quoteButton {
         cursor: pointer;
@@ -20,12 +20,15 @@
       #quoteButton:active {
         transform: translateY(5);
       }
-    </style>
+      h1 {
+        text-align:center;
+      }
+  </style>
   </head>
   <body>
     <div class="container">
 
-      <img id = quoteButton src="images/swanson_face.png" alt="Click Me" title="Click Me" height="150px">
+      <img id = quoteButton src="images/swanson_face.png" height="150px">
       <!-- <img id="cat_img" src=""/> -->
       <div id="quoteDiv">
 
