--- a/Code/Drew/javascript/lab04-api_site.html
+++ b/Code/Drew/javascript/lab04-api_site.html
@@ -15,13 +15,16 @@
       }
       #quoteButton {
         cursor: pointer;
-        transition: .3s;
+        transition: .2s;
       }
       #quoteButton:active {
-        transform: translateY(5);
+        transform:translateY(5px);
+        /* height: 100px; */
       }
       h1 {
         text-align:center;
+        font-family: 'helvetica';
+        color: #330b00
       }
   </style>
   </head>
